Adding user in the postgresql database

--- a/apis/src/main/resources/application.properties
+++ b/apis/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Enable H2 console for development
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
+
+#springboot security configuration
+spring.security.user.name=viateur
+spring.security.user.password=viateur123
