--- a/apis/src/main/resources/application.properties
+++ b/apis/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.show-sql=true
 #springboot security configuration
 spring.security.user.name=viateur
 spring.security.user.password=viateur123
+spring.main.allow-circular-references=true
